MarcosSanchezSpring/src/main/java/com/example/marcossanchezspring/domain/errors/ErrorAppUsuarios.java
package com.example.marcossanchezspring.domain.errors;

public enum ErrorAppUsuarios implements ErrorApp{
    ERROR_GUARDAR_USUARIO,
    USUARIO_NO_EXISTE,
    PASSWORD_INCORRECTA,
    USUARIO_NO_ENCONTRADO,
    USUARIO_YA_EXISTE
}
